--- a/.eslintrc
+++ b/.eslintrc
@@ -7,6 +7,7 @@
   "rules": {
     "react-native/split-platform-components": 2,
     "react-native/no-unused-styles": 2,
+    "react/prop-types": 0,
   },
   "settings": {
     "react": {
